compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__constant.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: "\nimport rocket_ship\npub fn go() { rocket_ship.x }\n"
snapshot_kind: text
---
----- SOURCE CODE

import rocket_ship
pub fn go() { rocket_ship.x }


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  rocket_ship_P "example.com/todo/thepackage/rocket_ship"
)

const _ = gleam_P.Use_Import
const _ = rocket_ship_P.Use_Import
const Use_Import byte = 0

func Go() gleam_P.Int_t {
  return rocket_ship_P.X
}
