compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__different_package_import.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: "import one\npub fn go() { one.go() }\n"
snapshot_kind: text
---
----- SOURCE CODE
import one
pub fn go() { one.go() }


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  one_P "example.com/todo/other_package/one"
)

const _ = gleam_P.Use_Import
const _ = one_P.Use_Import
const Use_Import byte = 0

func Go() gleam_P.Int_t {
  return one_P.Go()
}
