compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__discarded_duplicate_import_with_unqualified.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: "\nimport esa/rocket_ship\nimport nasa/rocket_ship.{go} as _nasa_rocket\npub fn esa_go() { rocket_ship.go() }\npub fn nasa_go() { go() }\n"
snapshot_kind: text
---
----- SOURCE CODE
-- esa/rocket_ship.gleam
pub fn go() { 1 }

-- nasa/rocket_ship.gleam
pub fn go() { 1 }

-- main.gleam

import esa/rocket_ship
import nasa/rocket_ship.{go} as _nasa_rocket
pub fn esa_go() { rocket_ship.go() }
pub fn nasa_go() { go() }


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  rocket_ship_P "example.com/todo/thepackage/esa/rocket_ship"
  nasaʹrocket_ship_P "example.com/todo/thepackage/nasa/rocket_ship"
)

const _ = gleam_P.Use_Import
const _ = rocket_ship_P.Use_Import
const _ = nasaʹrocket_ship_P.Use_Import
const Use_Import byte = 0

func EsaGo() gleam_P.Int_t {
  return rocket_ship_P.Go()
}

func NasaGo() gleam_P.Int_t {
  return nasaʹrocket_ship_P.Go()
}
