compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__multiple_unqualified_fn_call.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: "import rocket_ship.{a,b as bb}\npub fn go() { a() + bb() }\n"
snapshot_kind: text
---
----- SOURCE CODE
import rocket_ship.{a,b as bb}
pub fn go() { a() + bb() }


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  rocket_ship_P "example.com/todo/thepackage/rocket_ship"
)

const _ = gleam_P.Use_Import
const _ = rocket_ship_P.Use_Import
const Use_Import byte = 0

func Go() gleam_P.Int_t {
  return rocket_ship_P.A() + rocket_ship_P.B()
}
