compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__nested_fn_call.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: "import one/two\npub fn go() { two.go() }"
snapshot_kind: text
---
----- SOURCE CODE
import one/two
pub fn go() { two.go() }

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  two_P "example.com/todo/thepackage/one/two"
)

const _ = gleam_P.Use_Import
const _ = two_P.Use_Import
const Use_Import byte = 0

func Go() gleam_P.Int_t {
  return two_P.Go()
}
