compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__nested_module_constant.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: "\nimport rocket_ship/launcher\npub fn go() { launcher.x }\n"
snapshot_kind: text
---
----- SOURCE CODE

import rocket_ship/launcher
pub fn go() { launcher.x }


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  launcher_P "example.com/todo/thepackage/rocket_ship/launcher"
)

const _ = gleam_P.Use_Import
const _ = launcher_P.Use_Import
const Use_Import byte = 0

func Go() gleam_P.Int_t {
  return launcher_P.X
}
